2006-10-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* html2text.el (html2text-format-tags): Avoid infloop on open tags.

2006-10-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-set-mode-line): Quote % in group name.

2006-10-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-agent.el (gnus-agent-make-mode-line-string): Make it compatible
	with Emacs 21 and XEmacs.

2006-10-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-parse-address): New function for better parsing,
	catching errors, etc.
	(spam-check-BBDB, spam-enter-ham-BBDB, spam-parse-list): Use it.

2006-10-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-view.el: Add interactive arg to html2text autoload.

2006-10-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-move-article): Use no-encode for `B B'.

2006-10-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-codepage-iso-8859-list, mm-codepage-ibm-list): New
	variables.
	(mm-setup-codepage-iso-8859, mm-setup-codepage-ibm): New functions.
	(mm-charset-synonym-alist): Move some entries to
	mm-codepage-iso-8859-list.

	* gnus.el (gnus-getenv-nntpserver, gnus-select-method): Autoload.

2006-10-23  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-citation-line-format)
	(message-insert-formated-citation-line): Fix implementation of %E, %N
	and %n according to the doc string.

2006-10-20  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-BBDB, spam-enter-ham-BBDB, spam-parse-list): Use
	car-safe to avoid bad parses.

2006-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-make-doc-group): Work for non-ASCII group
	names.

	* gnus-sum.el (gnus-select-newsgroup): Decode group name.

2006-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-draft.el (gnus-draft-edit-message): Make sure to remove Date
	header.

	* message.el (message-draft-headers): Add Date.
	(message-headers-to-generate): Fix typo in docstring.

	* nndraft.el (nndraft-required-headers): New variable.